--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
                         <a href="/" class="nav-item nav-link {% if request.path == '/' %}active{% endif %}">Home</a>
                         <a href="{% url 'about'%}" class="nav-item nav-link {% if request.path == '/about/' %}active{% endif %}">About</a>
                         <a href="{% url 'service_list' %}" class="nav-item nav-link {% if request.path == '/services/' %}active{% endif %}">Services</a>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="{% url 'contact'%}" class="nav-item nav-link {% if request.path == '/contact/' %}active{% endif %}">Contact</a>
                     </div>
                 </div>
             </nav>
