finishing the project

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+    
 
     <head>
         <meta charset="utf-8">
-        <title>Travela - Tourism Website Template</title>
+        <title>Z Marketing - {% block title %}{% endblock title %}</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -54,7 +55,7 @@
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center" style="height: 45px;">
-                        <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>{{myfooter.phone}}</small></a>
+                        <a href="#"><small class="me-3 text-light"><i class="fa fa-user me-2"></i>{{myfooter.phone1}}</small></a>
                         
                     </div>
                 </div>
@@ -130,8 +131,8 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Get In Touch</h4>
                             <a href=""><i class="fas fa-home me-2"></i> {{myfooter.address}}</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> {{myfooter.email}}</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> {{myfooter.phone}}</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i> {{myfooter.email1}}</a>
+                            <a href=""><i class="fas fa-phone me-2"></i> {{myfooter.phone1}}</a>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
                                 <a class="btn-square btn btn-primary rounded-circle mx-1" href="{{myfooter.fb_link}}"><i class="fab fa-facebook-f"></i></a>
@@ -144,7 +145,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-2">
                         <div class="footer-item d-flex  flex-column">
                             <h4 class="mb-4 text-white">Company</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> About</a>
+                            <a href="{% url 'about'%}"><i class="fas fa-angle-right me-2"></i> About</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Careers</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Blog</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Press</a>
@@ -155,7 +156,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Support</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Contact</a>
+                            <a href="{% url 'contact'%}"><i class="fas fa-angle-right me-2"></i> Contact</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Legal Notice</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Privacy Policy</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Terms and Conditions</a>
