--- a/contacts/templates/contact.html
+++ b/contacts/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block title %}
+Contact
+{% endblock title %}
 {% block body %}
 
 <!-- Header Start -->
@@ -32,13 +34,21 @@
                             <div class="text-center mb-4">
                                 <i class="fa fa-phone-alt fa-3x text-primary mb-3"></i>
                                 <h4 class="text-primary">Mobile</h4>
-                                <p class="mb-0">{{myfooter.phone}}</p>
+                                <p class="mb-0">{{myfooter.phone1}}</p>
+                                {% if myfooter.phone2 %}
+                                <p class="mb-0">{{myfooter.phone2}}</p>
+                                {% else %}
+                                {% endif %}
                             </div>
                            
                             <div class="text-center">
                                 <i class="fa fa-envelope-open fa-3x text-primary mb-3"></i>
                                 <h4 class="text-primary">Email</h4>
-                                <p class="mb-0">{{myfooter.email}}</p>
+                                <p class="mb-0">{{myfooter.email1}}</p>
+                                {% if myfooter.email2 %}
+                                <p class="mb-0">{{myfooter.email2}}</p>
+                                {% else %}
+                                {% endif %}
                             </div>
                         </div>
                     </div>
