--- a/settings/templates/home.html
+++ b/settings/templates/home.html
@@ -1,5 +1,31 @@
 {% extends "base.html" %}
+{% load static %}
+{% block title %}
+Home
+{% endblock title %}
 {% block body %}
+
+
+<!-- Vendor Start -->
+    <div class="container-fluid  mt-5 py-5">
+        <div class="mx-auto text-center mb-5" style="max-width: 900px;">
+            <h5 class="section-title px-3">Clients</h5>
+            <h1 class="mb-0">Our Amazing Clients</h1>
+        </div>
+        <div class="row px-xl-5">
+            <div class="col ">
+                <div class="owl-carousel  vendor-carousel">
+                    {% for vendor in vendors %}
+                    <div class="vendor-item ">
+                        <img class="w-75" src="{{vendor.image.url}}" alt="">
+                    </div>
+                    {% endfor %}
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Vendor End -->
 
 <!-- About Start -->
 <div class="container-fluid about py-5">
@@ -59,198 +85,7 @@
     </div>
 </div>
 <!-- Services End -->
-<!-- Tour Booking Start -->
-<div class="container-fluid booking py-5">
-    <div class="container py-5">
-        <div class="row g-5 align-items-center">
-            <div class="col-lg-6">
-                <h5 class="section-booking-title pe-3">Booking</h5>
-                <h1 class="text-white mb-4">Online Booking</h1>
-                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime
-                    ullam esse fuga blanditiis accusantium pariatur quis sapiente, veniam doloribus praesentium?
-                    Repudiandae iste voluptatem fugiat doloribus quasi quo iure officia.
-                </p>
-                <p class="text-white mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur maxime
-                    ullam esse fuga blanditiis accusantium pariatur quis sapiente, veniam doloribus praesentium?
-                    Repudiandae iste voluptatem fugiat doloribus quasi quo iure officia.
-                </p>
-                <a href="#" class="btn btn-light text-primary rounded-pill py-3 px-5 mt-2">Read More</a>
-            </div>
-            <div class="col-lg-6">
-                <h1 class="text-white mb-3">Book A Tour Deals</h1>
-                <p class="text-white mb-4">Get <span class="text-warning">50% Off</span> On Your First Adventure Trip
-                    With Travela. Get More Deal Offers Here.</p>
-                <form>
-                    <div class="row g-3">
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control bg-white border-0" id="name"
-                                    placeholder="Your Name">
-                                <label for="name">Your Name</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="email" class="form-control bg-white border-0" id="email"
-                                    placeholder="Your Email">
-                                <label for="email">Your Email</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating date" id="date3" data-target-input="nearest">
-                                <input type="text" class="form-control bg-white border-0" id="datetime"
-                                    placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />
-                                <label for="datetime">Date & Time</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <select class="form-select bg-white border-0" id="select1">
-                                    <option value="1">Destination 1</option>
-                                    <option value="2">Destination 2</option>
-                                    <option value="3">Destination 3</option>
-                                </select>
-                                <label for="select1">Destination</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <select class="form-select bg-white border-0" id="SelectPerson">
-                                    <option value="1">Persons 1</option>
-                                    <option value="2">Persons 2</option>
-                                    <option value="3">Persons 3</option>
-                                </select>
-                                <label for="SelectPerson">Persons</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <select class="form-select bg-white border-0" id="CategoriesSelect">
-                                    <option value="1">Kids</option>
-                                    <option value="2">1</option>
-                                    <option value="3">2</option>
-                                    <option value="3">3</option>
-                                </select>
-                                <label for="CategoriesSelect">Categories</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <textarea class="form-control bg-white border-0" placeholder="Special Request"
-                                    id="message" style="height: 100px"></textarea>
-                                <label for="message">Special Request</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-primary text-white w-100 py-3" type="submit">Book Now</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Tour Booking End -->
-<!-- Testimonial Start -->
-<div class="container-fluid testimonial py-5">
-    <div class="container py-5">
-        <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-            <h5 class="section-title px-3">Testimonial</h5>
-            <h1 class="mb-0">Our Clients Say!!!</h1>
-        </div>
-        <div class="testimonial-carousel owl-carousel">
-            <div class="testimonial-item text-center rounded pb-4">
-                <div class="testimonial-comment bg-light rounded p-4">
-                    <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum
-                        cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro
-                        officiis. Vero reiciendis,
-                    </p>
-                </div>
-                <div class="testimonial-img p-1">
-                    <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle" alt="Image">
-                </div>
-                <div style="margin-top: -35px;">
-                    <h5 class="mb-0">John Abraham</h5>
-                    <p class="mb-0">New York, USA</p>
-                    <div class="d-flex justify-content-center">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item text-center rounded pb-4">
-                <div class="testimonial-comment bg-light rounded p-4">
-                    <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum
-                        cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro
-                        officiis. Vero reiciendis,
-                    </p>
-                </div>
-                <div class="testimonial-img p-1">
-                    <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle" alt="Image">
-                </div>
-                <div style="margin-top: -35px;">
-                    <h5 class="mb-0">John Abraham</h5>
-                    <p class="mb-0">New York, USA</p>
-                    <div class="d-flex justify-content-center">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item text-center rounded pb-4">
-                <div class="testimonial-comment bg-light rounded p-4">
-                    <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum
-                        cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro
-                        officiis. Vero reiciendis,
-                    </p>
-                </div>
-                <div class="testimonial-img p-1">
-                    <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle" alt="Image">
-                </div>
-                <div style="margin-top: -35px;">
-                    <h5 class="mb-0">John Abraham</h5>
-                    <p class="mb-0">New York, USA</p>
-                    <div class="d-flex justify-content-center">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item text-center rounded pb-4">
-                <div class="testimonial-comment bg-light rounded p-4">
-                    <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum
-                        cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro
-                        officiis. Vero reiciendis,
-                    </p>
-                </div>
-                <div class="testimonial-img p-1">
-                    <img src="img/testimonial-4.jpg" class="img-fluid rounded-circle" alt="Image">
-                </div>
-                <div style="margin-top: -35px;">
-                    <h5 class="mb-0">John Abraham</h5>
-                    <p class="mb-0">New York, USA</p>
-                    <div class="d-flex justify-content-center">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Testimonial End -->
+
 <!-- Subscribe Start -->
 <div class="container-fluid subscribe py-5">
     <div class="container text-center py-5">
