--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -27,7 +27,7 @@ About
                     </div>
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
                         <h5 class="section-about-title pe-3">About Us</h5>
-                        <h1 class="mb-4">Welcome to <span class="text-primary">Travela</span></h1>
+                        <h1 class="mb-4">Welcome to <span class="text-primary">{{myfooter.site_name}}</span></h1>
                         <h5>What We Do</h5>
                         <p class="mb-4">{{about.what_we_do}}</p>
                         <h5>Our Mission</h5>
