finishing the project

--- a/settings/templates/home.html
+++ b/settings/templates/home.html
@@ -37,7 +37,7 @@ Home
                 </div>
             </div>
             <div class="col-lg-7"
-                style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url({img/about-img-1.png});">
+                style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url({% static 'img/about-img-1.png'%});">
                 <h5 class="section-about-title pe-3">About Us</h5>
                 <h1 class="mb-4">Welcome to <span class="text-primary">{{myfooter.site_name}}</span></h1>
                 <h5>What We Do</h5>
